# archemistry-back

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
api/: app.py  config.py  consts.json  errors.py  main.py
api/auth/: auth.py  signature.py  token.py
api/controllers/: match_controller.py  rating_controller.py  referral_controller.py  shop_controller.py  tasks_controller.py  user_controller.py
api/models/: __init__.py
api/models/match/: __init__.py  match_element.py  match_slot.py
api/models/referral/: referral.py
api/models/shop/: __init__.py  shop_energy_item.py
api/models/tasks/: __init__.py  task.py  user_task.py
api/models/user/: __init__.py  user.py  user_game_state.py  user_game_stats.py
api/routes/: __init__.py
api/routes/auth/: auth.py
api/routes/match/: match.py
api/routes/rating/: __init__.py  rating.py
api/routes/referral/: __init__.py  referral.py
api/routes/shop/: __init__.py  shop.py
api/routes/static/: __init__.py  static.py
api/routes/tasks/: __init__.py  (+1 more)
api/views/: __init__.py
db_init/: initialize.sql
db_init/configs/: db_daily_task.csv  db_match_element.csv  db_shop_energy_item.csv
migrations/models/: 10_20241026110826_update.py  11_20241026124637_update.py  12_20241026153834_update.py  13_20241029101428_update.py  14_20241029121020_update.py  1_20241015192035_update.py  2_20241015200259_update.py  3_20241015201650_update.py  4_20241022183926_update.py  5_20241023113912_update.py  6_20241023144125_update.py  7_20241024120426_update.py  8_20241024170143_update.py  9_20241025142709_update.py
(+11 files in other folders)
